--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,17 @@
 {
-    "version": 2,
     "builds": [
         {
             "src": "main.py",
             "use": "@vercel/python"
+        },
+        {
+            "src": "static/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
-            "src": "/api/webhook",
+            "src": "/(.*)",
             "dest": "main.py"
         }
     ]
